--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>i am an outgoing talkative outspoken person. Im very lazy and very headstrong...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Scottsdale, Az</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Playing video games, working out and playing basketball</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>To change the world</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Scottsdale, Az</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>A career change</p>
     </section>
 
     <footer id="footer">
